Update ContributorImage.java